--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <a href="juego3.html" target="_blank" rel="noopener noreferrer">Juego cuadrados</a>
+    <a href="juego4.html" target="_blank" rel="noopener noreferrer">Juego globos</a>
 </body>
 </html>
